# simple-tracer

./: CMakeLists.txt  camera.h  main.cpp  renderer.h  renderwindow.h  scene.h
